Update: fix CORS